# DAiS_Daily_System

./: .env.docker  .env.example  .gitignore  AGENTS.md  DockerSystem_Start.md  Dockerfile  LICENSE  README.md  Update_VPS.md  alles.txt  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  tailwind.config.ts  terminal-clean.txt  tsconfig.json  tsconfig.seed.json
System/: README.md
System/assets/: human-contact-store.json
System/config/: settings.example.toml
System/docs/: application.md  dependencies.md  program-system.md  security.md
System/tests/: conftest.py
docs/: Datenbank Updates Docker.md  LOCAL_TESTING.md
prisma/: schema.prisma  seed.ts
scripts/: dev-server.js
seed-data/: manual-inserts.sql
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: admin-card-editor.tsx  admin-panels.tsx  auth-gate.tsx  background-video.tsx  journal-board.tsx  menu-card.tsx  menu-dock.tsx  mobile-shell.tsx  program-cards-sidebar.tsx  program-content.tsx  program-detail-view.tsx  program-form.tsx  program-runner.tsx  program-stack-runner.tsx  program-wizard.tsx  requirements-board.tsx  requirements-modals.tsx  results-board.tsx  rewards-grid.tsx  roles-board.tsx  score-cards.tsx  sidebar-menu.tsx  success-toast.tsx  timeline-feed.tsx  user-menu.tsx
src/contexts/: program-completion-context.tsx
src/hooks/: use-auto-program-submit.ts  use-program-completion.ts
src/lib/: auth.ts  data.ts  demo-user.ts  household-data.ts  household.ts  human-data.ts  human.ts  mind-data.ts  program-blueprint.ts  programs.ts  types.ts  (+2 more)
(+117 files in other folders)
