[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dais-system"
version = "0.1.0"
description = "Pipelines und Agenten fuer DAiS JSON Stores"
authors = [{name = "BetriebsIntelligenz"}]
readme = "System/README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.1", "ruff>=0.4", "mypy>=1.10", "build>=1.2"]

[project.urls]
Repository = "https://github.com/BetriebsIntelligenz/DAiS_System"

[tool.setuptools.packages.find]
where = ["System/src"]
include = ["dais_system*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = ["System/tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
packages = ["dais_system"]

